# MongoDB_API/MongoDB_API/Controllers/ProductController.cs
@@ -23,7 +23,7 @@ namespace MongoDB_API.Controllers
         }
 
         [HttpPost]
-        public async Task<IActionResult> CreateProduct([FromBody] Product product)
+        public async Task<IActionResult> CreateProduct([FromBody] Product product ) 
         {
             if (product == null)
                 return BadRequest();
@@ -46,7 +46,7 @@ namespace MongoDB_API.Controllers
                 ModelState.AddModelError("Name", "The product shouldn't be empty");
 
             }
-            product.Id = id;
+            product.Id = new MongoDB.Bson.ObjectId (id);
             await db.UpdateProduct(product);
             return Created("Created", true);
         }
