# MongoDB_API/MongoDB_API/Models/Feedback.cs
@@ -10,8 +10,8 @@ namespace MongoDB_API.Models
     public class Feedback
     {
         [BsonId]
-        [BsonRepresentation(MongoDB.Bson.BsonType.ObjectId)]
-        public string Id { get; set; }
+        //[BsonRepresentation(MongoDB.Bson.BsonType.ObjectId)]
+        public ObjectId Id { get; set; }
         public string Name { get; set; }
     
         public string F_Purchase { get; set; }
